--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
       </button>
     </mat-menu>
   </span>
-  <span class="fill-remaining-space">Application Title</span>
+  <span class="fill-remaining-space">Sri Jayam Silver</span>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
