--- a/src/app/bill/bill.component.html
+++ b/src/app/bill/bill.component.html
@@ -1,10 +1,12 @@
 <br>
+
+<!-- <app-print  [datafromparentcompo]="data"></app-print> -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">   
             <div class="card">
                 <div class="card-header text-center">
-                  <h1>RKV SILVER</h1>
+                  <h1>SRI JAYAM SILVER</h1>
                   <h3>28/9, 1st Floor,Adhi Raman Nandavanam Street,Shevapet,Salem -636002,TN</h3>
                 </div>
                 <div class="card-header">
