--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,10 @@
         <mat-icon>receipt</mat-icon>
         <span>Bill</span>
       </button>
+      <button mat-menu-item routerLink="/receipt2">
+        <mat-icon>receipt</mat-icon>
+        <span>Included Gst Bill</span>
+      </button>
       <button mat-menu-item routerLink="/print">
         <mat-icon>print</mat-icon>
         <span>Print</span>
