--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,17 +16,29 @@
         <mat-icon>queue</mat-icon>
         <span>Product</span>
       </button>
-      <button mat-menu-item routerLink="/receipt">
-        <mat-icon>receipt</mat-icon>
-        <span>Bill</span>
+      <button mat-menu-item routerLink="/sareeproduct">
+        <mat-icon>queue</mat-icon>
+        <span>Saree Product</span>
       </button>
-      <button mat-menu-item routerLink="/receipt2">
+      <button mat-menu-item routerLink="/includedgst">
         <mat-icon>receipt</mat-icon>
+        <span>Included GST</span>
+      </button>
+      <button mat-menu-item routerLink="/nonincludedgst">
+        <mat-icon>receipt</mat-icon>
+        <span>Not Included GST</span>
+      </button>
+      <button mat-menu-item routerLink="/sareebill">
+        <mat-icon>print</mat-icon>
+        <span>Saree Bill</span>
+      </button>
+      <button mat-menu-item routerLink="/includedgstbillpage">
+        <mat-icon>print</mat-icon>
         <span>Included Gst Bill</span>
       </button>
-      <button mat-menu-item routerLink="/print">
+      <button mat-menu-item routerLink="/nonincludedgstbillpage">
         <mat-icon>print</mat-icon>
-        <span>Print</span>
+        <span> Non Included Gst Bill</span>
       </button>
     </mat-menu>
   </span>
