updated menu features added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,10 @@
         <mat-icon>queue</mat-icon>
         <span>Saree Product</span>
       </button>
+      <button mat-menu-item routerLink="/sareeproductgst">
+        <mat-icon>receipt</mat-icon>
+        <span>Saree Product GST</span>
+      </button>
       <button mat-menu-item routerLink="/includedgst">
         <mat-icon>receipt</mat-icon>
         <span>Included GST</span>
@@ -30,15 +34,15 @@
       </button>
       <button mat-menu-item routerLink="/sareebill">
         <mat-icon>print</mat-icon>
-        <span>Saree Bill</span>
+        <span>Saree Bill Print</span>
       </button>
       <button mat-menu-item routerLink="/includedgstbillpage">
         <mat-icon>print</mat-icon>
-        <span>Included Gst Bill</span>
+        <span>Included Gst Bill Print</span>
       </button>
       <button mat-menu-item routerLink="/nonincludedgstbillpage">
         <mat-icon>print</mat-icon>
-        <span> Non Included Gst Bill</span>
+        <span> Non Included Gst Bill Print</span>
       </button>
     </mat-menu>
   </span>
