--- a/src/app/includedgst/includedgst.component.html
+++ b/src/app/includedgst/includedgst.component.html
@@ -6,8 +6,8 @@
         <div class="col-sm-12">   
             <div class="card">
                 <div class="card-header text-center">
-                  <h1>SRI JAYAM SILVER</h1>
-                  <h3>28/9, 1st Floor,Adhi Raman Nandavanam Street,Shevapet,Salem -636002,TN</h3>
+                  <h1>SHREE JEYAM SILVERS</h1>
+                  <h3>14/6 , Thammannan Street,Gugai,Salem - 636006</h3>
                 </div>
                 <div class="card-header">
                     <div class="row">  
@@ -27,7 +27,7 @@
                       </form>
                       </div>                    
                       <div class="col-sm-4">
-                        <label  for="cus_address">GSTIN:&nbsp;<b>{{"33BFSPP1826D1ZG"}}</b></label><br>                        
+                        <label  for="cus_address">GSTIN:&nbsp;<b>{{"33BKMPA0961M1Z5"}}</b></label><br>                        
                        </div>
                       <div class="col-sm-4"> 
                         <label  for="cus_address">State Code:&nbsp;<b>{{"33"}}</b></label><br>
