--- a/src/app/sareeproductgst/sareeproductgst.component.html
+++ b/src/app/sareeproductgst/sareeproductgst.component.html
@@ -1,6 +1,4 @@
 <br>
-
-<!-- <app-print  [datafromparentcompo]="data"></app-print> -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">   
@@ -160,9 +158,9 @@
                     <mat-label>Round off</mat-label>
                     <input matInput placeholder="roundoff" readonly formControlName="roundoff" >
                   </mat-form-field>
-                  <div class="example-button-row">
+                  <!-- <div class="example-button-row">
                     <button mat-raised-button (click)="taxcalc();" *ngIf="dataSource.data.length != 0"  color="primary">Calculate</button>
-                  </div>
+                  </div> -->
                   </form>
                 </div>
                </div>
