product sarree total

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
       </button>
     </mat-menu>
   </span>
-  <span class="fill-remaining-space">Sri Jayam Silver</span>
+  <span class="fill-remaining-space">SHREE JEYAM SILVERS</span>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
