--- a/src/app/sareeproductgst/sareeproductgst.component.html
+++ b/src/app/sareeproductgst/sareeproductgst.component.html
@@ -50,20 +50,25 @@
                   <form class="form-inline" (ngSubmit)="add();" [formGroup]="productForm">                
                     <div class="col-sm-4">
                       <mat-form-field appearance="outline" class="example-full-width">
-                        <input type="text" formControlName="productname" [(ngModel)]="value2" placeholder="Product Name" aria-label="Number1" matInput [formControl]="countryCtrl2" [matAutocomplete]="auto1" required matTooltip="Type to filter the Product Detail" matTooltipPosition="after">
+                        <input type="text" formControlName="productname" [(ngModel)]="value2" placeholder="Saree Product Name" aria-label="Number1" matInput [formControl]="countryCtrl2" [matAutocomplete]="auto1" required matTooltip="Type to filter the Product Detail" matTooltipPosition="after">
                         <button mat-button  matSuffix mat-icon-button aria-label="Clear" (click)="value2=''">
                           <mat-icon>close</mat-icon>
                         </button>
                         <mat-autocomplete #auto1="matAutocomplete">
-                          <mat-option (onSelectionChange)="prod(proditem);" (keydown.enter)="prod(proditem);"  (click)="prod(proditem);" *ngFor="let proditem of filteredCountry2 | async" [value]="proditem.productname">
-                            <span>{{ proditem.productname }} | {{ proditem.qty }}</span>
+                          <mat-option (onSelectionChange)="prod(proditem);" (keydown.enter)="prod(proditem);"  (click)="prod(proditem);" *ngFor="let proditem of filteredCountry2 | async" [value]="proditem.sareeproductname">
+                            <span>{{ proditem.sareeproductname}} | {{ proditem.sareeqty }}</span>
                           </mat-option>
                         </mat-autocomplete>
-                      </mat-form-field>                    </div>
+                      </mat-form-field>        
+                  </div>
                   <div class="col-sm-4">
                     <mat-form-field appearance="outline"  class="example-full-width">
-                      <mat-label>Rate</mat-label>
-                      <input matInput type="number" autocomplete="off" formControlName="rate" max >  
+                      <mat-label>Quantity</mat-label>
+                      <input matInput type="number" autocomplete="off" formControlName="qty" max >  
+                    </mat-form-field>
+                    <mat-form-field appearance="outline"  class="example-full-width">
+                      <mat-label>Discount Rate</mat-label>
+                      <input matInput type="number" autocomplete="off" formControlName="dis" max >  
                     </mat-form-field>
                   </div>
                   <div class="col-sm-4">
@@ -91,17 +96,33 @@
 
                       <ng-container matColumnDef="productname">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
-                        <td mat-cell *matCellDef="let producttable"> {{producttable.productname}} </td>
+                        <td mat-cell *matCellDef="let producttable"> {{producttable.sareeproductname}} </td>
                         <td mat-footer-cell *matFooterCellDef>  </td>
-
                       </ng-container>
                   
+                      <ng-container matColumnDef="qty">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
+                        <td mat-cell *matCellDef="let producttable"> {{producttable.collected.qty}} </td>
+                        <td mat-footer-cell *matFooterCellDef>  </td>
+                      </ng-container>
+
                       <ng-container matColumnDef="rate">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate </th>
-                        <td mat-cell *matCellDef="let producttable"> {{producttable.rate}} </td>
-                        <td mat-footer-cell *matFooterCellDef>{{getTotalAmount() | currency:'INR'}} </td>
+                        <td mat-cell *matCellDef="let producttable"> {{producttable.sareerate}} </td>
+                        <td mat-footer-cell *matFooterCellDef> </td>
                       </ng-container>
 <!-- s -->
+                      <ng-container matColumnDef="discount">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Discount </th>
+                        <td mat-cell *matCellDef="let producttable"> {{producttable.collected.dis}} </td>
+                        <td mat-footer-cell *matFooterCellDef>  </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="total">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
+                        <td mat-cell *matCellDef="let producttable"> {{producttable.total}} </td>
+                        <td mat-footer-cell *matFooterCellDef>{{getTotalAmount() | currency:'INR'}} </td>
+                      </ng-container>
 
                       <ng-container matColumnDef="Delete">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete </th>
