--- a/src/app/sareeproductgst/sareeproductgst.component.html
+++ b/src/app/sareeproductgst/sareeproductgst.component.html
@@ -47,10 +47,10 @@
                <br>
                <div class="row">      
                 <div class="col-sm-12">
-                  <form class="form-inline" (ngSubmit)="add();" [formGroup]="productForm">                
+                  <form class="form-inline"  [formGroup]="productForm">                
                     <div class="col-sm-4">
                       <mat-form-field appearance="outline" class="example-full-width">
-                        <input type="text" formControlName="productname" [(ngModel)]="value2" placeholder="Saree Product Name" aria-label="Number1" matInput [formControl]="countryCtrl2" [matAutocomplete]="auto1" required matTooltip="Type to filter the Product Detail" matTooltipPosition="after">
+                        <input type="text" formControlName="productname" [(ngModel)]="value2" placeholder="Saree Product Code" aria-label="Number1" matInput [formControl]="countryCtrl2" [matAutocomplete]="auto1" required matTooltip="Type to filter the Product Detail" matTooltipPosition="after">
                         <button mat-button  matSuffix mat-icon-button aria-label="Clear" (click)="value2=''">
                           <mat-icon>close</mat-icon>
                         </button>
@@ -59,8 +59,14 @@
                             <span>{{ proditem.sareeproductname}} | {{ proditem.sareeqty }}</span>
                           </mat-option>
                         </mat-autocomplete>
-                      </mat-form-field>        
-                  </div>
+                      </mat-form-field>   
+                      <div *ngIf="proditem != ''">
+                        <span class="badge badge-info">Product Name</span>:<span class="badge badge-light">{{proditem.sareeproductname || "xxx"}}</span><br>
+                        <span class="badge badge-info">Total Qty</span>:<span class="badge badge-light">{{proditem.sareeqty || "xxx"}}</span><br>
+                        <span class="badge badge-info">Rate</span>:<span class="badge badge-light">{{proditem.sareerate || "xxx"}}</span><br>
+                        <span class="badge badge-info">Hsn Code</span>:<span class="badge badge-light">{{proditem.sareehsncode || "xxx"}}</span><br>
+                      </div>
+                    </div>
                   <div class="col-sm-4">
                     <mat-form-field appearance="outline"  class="example-full-width">
                       <mat-label>Quantity</mat-label>
@@ -73,7 +79,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="example-button-row">
-                    <button mat-raised-button  color="primary">Add</button>
+                    <button mat-raised-button (click)="add();"  color="primary">Add</button>
                     </div>
                   </div>
                 </form><br>
@@ -109,6 +115,12 @@
                       <ng-container matColumnDef="rate">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Rate </th>
                         <td mat-cell *matCellDef="let producttable"> {{producttable.sareerate}} </td>
+                        <td mat-footer-cell *matFooterCellDef> </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="subtotal">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Subtotal </th>
+                        <td mat-cell *matCellDef="let producttable"> {{producttable.sareerate * producttable.collected.qty}} </td>
                         <td mat-footer-cell *matFooterCellDef> </td>
                       </ng-container>
 <!-- s -->
