--- a/src/app/sareeproductpage/sareeproductpage.component.html
+++ b/src/app/sareeproductpage/sareeproductpage.component.html
@@ -8,25 +8,29 @@
                   <div class="row">
                     <div class="col-sm-4">
                       <form autocomplete="off"  [formGroup]="sareesForm" >                        
-                    <mat-form-field  appearance="outline" class="example-full-width">
+                    <mat-form-field  appearance="outline"  class="example-full-width">
                       <mat-label>Product Name</mat-label>
-                      <input matInput formControlName="sareeproductname">
+                      <input matInput formControlName="sareeproductname" required>
                     </mat-form-field>
-                    <mat-form-field  appearance="outline" class="example-full-width">
+                    <mat-form-field  appearance="outline"  class="example-full-width">
                         <mat-label>Product Quantity</mat-label>
-                        <input matInput type="number" formControlName="sareeqty">
+                        <input matInput type="number" formControlName="sareeqty" required>
                       </mat-form-field>
-                      <mat-form-field  appearance="outline" class="example-full-width">
+                      <mat-form-field  appearance="outline"  class="example-full-width">
                         <mat-label>Product Rate</mat-label>
-                        <input matInput type="number" formControlName="sareerate">
+                        <input matInput type="number" formControlName="sareerate" required>
                       </mat-form-field>
-                      <mat-form-field  appearance="outline" class="example-full-width">
+                      <mat-form-field  appearance="outline"  class="example-full-width">
                         <mat-label>Product Code</mat-label>
-                        <input matInput formControlName="sareecode" [readonly]="pcodedisable">
+                        <input matInput formControlName="sareecode" [readonly]="pcodedisable" required>
                       </mat-form-field>  
-                      <mat-form-field appearance="outline" class="example-full-width">                        
+                      <mat-form-field  appearance="outline"  class="example-full-width">
+                        <mat-label>HSN Code</mat-label>
+                        <input matInput formControlName="sareehsncode"  required>
+                      </mat-form-field>  
+                      <mat-form-field appearance="outline"  class="example-full-width">                        
                             <mat-label>Choose a date</mat-label>
-                            <input matInput formControlName="date" [matDatepicker]="picker">
+                            <input matInput formControlName="date" [matDatepicker]="picker" required>
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>                          
                       </mat-form-field>
@@ -54,6 +58,12 @@
                           <td mat-footer-cell *matFooterCellDef>  </td>
                         </ng-container>
                     
+                        <ng-container matColumnDef="sareehsncode">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Hsn Code </th>
+                          <td mat-cell *matCellDef="let customertable"> {{customertable.sareehsncode}} </td>
+                          <td mat-footer-cell *matFooterCellDef>  </td>
+                        </ng-container>
+
                         <ng-container matColumnDef="sareeqty">
                           <th mat-header-cell *matHeaderCellDef mat-sort-header> Quality </th>
                           <td mat-cell *matCellDef="let customertable"> {{customertable.sareeqty}} </td>
@@ -129,6 +139,12 @@
                       <td mat-footer-cell *matFooterCellDef>  </td>
                     </ng-container>
                 
+                    <ng-container matColumnDef="sareehsncode">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Hsn Code </th>
+                      <td mat-cell *matCellDef="let customertable"> {{customertable.sareehsncode}} </td>
+                      <td mat-footer-cell *matFooterCellDef>  </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="sareeqty">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header> Quality </th>
                       <td mat-cell *matCellDef="let customertable"> {{customertable.sareeqty}} </td>
