testing tax in saree

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,3 +50,8 @@
 </mat-toolbar>
 
 <router-outlet></router-outlet>
+
+<ngx-spinner bdOpacity = 1 bdColor = "rgba(103,97,97,0.71)" size = "large" color = "#fff" type = "timer" [fullScreen] = "true">
+  <br />
+<p style="color: white" > Check your LAN/Wifi Connection </p>
+</ngx-spinner>
