--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,31 @@
-<p>home works!</p>
+<br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+        <div class="alert alert-primary" role="alert">
+            Total Customer : {{customercount || "Loading"}}
+          </div>
+          <div class="alert alert-secondary" role="alert">
+            Total Saree Bill : {{sareebillcount || "Loading"}}
+          </div>
+          <div class="alert alert-success" role="alert">
+            Total Saree Product : {{ sareeproductcount || "Loading"}}
+          </div>
+          <div class="alert alert-danger" role="alert">
+            Total Product : {{productcount || "Loading"}}
+          </div>
+          <!-- <div class="alert alert-warning" role="alert">
+            This is a warning alert—check it out!
+          </div>
+          <div class="alert alert-info" role="alert">
+            This is a info alert—check it out!
+          </div>
+          <div class="alert alert-light" role="alert">
+            This is a light alert—check it out!
+          </div>
+          <div class="alert alert-dark" role="alert">
+            This is a dark alert—check it out!
+          </div> -->
+        </div>
+    </div>
+</div>
