--- a/src/app/sareebillpage/sareebillpage.component.html
+++ b/src/app/sareebillpage/sareebillpage.component.html
@@ -30,16 +30,16 @@
     </div>
   </div>
     <div class="text-center">
-        <h3  style="border-style: ridge;padding:6px 6px;">
+        <h2  style="border-style: ridge;padding:6px 6px;">
             <span class="text-left"><img src="../../assets/photo/vinayaga.jpg" style="width:50px;height:50px;">
             </span>
-            SHREE JEYAM SILVERS
+            SHREE JEYAM SILVERS & Sarees
             <span class="text-right"><img src="../../assets/photo/murugan.jpg" style="width:50px;height:50px;">
             </span>
             <br>
             <small >Manufactures of Silver Ornaments</small><br>
             <small >14/6 , Thammannan Street,Gugai,Salem - 636006</small>
-        </h3>
+        </h2>
         <div class="row">
         <div class="col-sm-6"> 
           <input type="text" value="Vehical No:" class="form-control">
@@ -154,8 +154,8 @@
     </div>
     <!-- <hr> -->
     <div class="row">
-      <div class="col-sm-12">
-        <span><b>Rupees</b></span><input type="text" class="form-control" value="{{rupessinwords | uppercase}} only">
+      <div class="col-sm-12" style="border-style: ridge;padding: 6px 6px;">
+        <label  for="Rupees"><b>Rupees</b>&nbsp;{{rupessinwords | uppercase}}</label><br>
       </div>
       <div class="col-sm-6">
         <br>
